--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -2,7 +2,8 @@
 {% block title %}KongsIsland{% endblock %}
 {% block content %}
 <div class="login-box auth0-box before">
-    <a class="btn btn-primary btn-lg btn-login btn-block" href="/login">Log In</a>
+    <a class="btn btn-primary btn-success btn-login btn-block" href="/login">Log In</a>
+	<a class="btn btn-primary btn-lg btn-login btn-block" href="/logout">Log Off</a>
 </div>
 <div class="row">
 	<div class="col-sm-6">
