create reset database button

--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -27,6 +27,7 @@
 	</div>
 	<div class="col-sm-6 hidden-sm hidden-xs">
 		<img id="front-splash" src="{{ url_for('static',filename='img/TitleGorilla.jpg') }}" alt="The Handsome Chap" />
+		<a class="btn btn-primary btn-lg btn-logout btn-block" href="/reset_database">Reset Database</a>
 	</div>
 </div>
 {% endblock %}
