--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -10,15 +10,15 @@
 		</h3>
 		<h3>
 			<a href="/zoos"><button class="btn btn-success btn-lg">Find a zoo</button></a></p>
-			<a href="/zoos/create"><button class="btn btn-primary btn-lg">Add a zoo to our database</button></a>
+			<a href="/zoos"><button class="btn btn-primary btn-lg">Add a zoo to our database</button></a>
 		</h3>
 		<h3>
 			<a href="/gorillas"><button class="btn btn-success btn-lg">See the Silverbacks</button></a></p>
-			<a href="/gorillas/create"><button class="btn btn-primary btn-lg">Add a silverback to the Captive Breeding programme</button></a>
+			<a href="/gorillas"><button class="btn btn-primary btn-lg">Add a silverback to the Captive Breeding programme</button></a>
 		</h3>
 		<p class="lead">Post a silverback's visit to your zoo.</p>
 		<h3>
-			<a href="/bookings/create"><button class="btn btn-primary btn-lg">Post a new visit of a Silverback</button></a>
+			<a href="/bookings"><button class="btn btn-primary btn-lg">Post a new visit of a Silverback</button></a>
 		</h3>
 	</div>
 	<div class="col-sm-6 hidden-sm hidden-xs">
